adding in chris css file and fixing index and header stuff

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -22,7 +22,7 @@
       "text_font": "'Futura', 'Helvetica Neue', Helvetica, Arial, sans-serif",
       "headings_font": "'Futura', 'Helvetica Neue', Helvetica, Arial, sans-serif",
       "accent_font": "'Futura', 'Helvetica Neue', Helvetica, Arial, sans-serif",
-      "global_heading_font_color": "#000000",
+      "global_heading_font_color": "#fff",
       "bg_color": "#ffffff",
       "page_bg_transparent": true,
       "page_bg_color": "#ffffff",
@@ -220,7 +220,7 @@
       "show_maestro": false,
       "show_google_wallet": false,
       "show_dankort": false,
-      "payment_methods_dark": false,
+      "payment_methods_dark": true,
       "show_multiple_currencies": false,
       "currency_format": "money_format",
       "supported_currencies": "CAD USD",
