Initial work on subpages by Chris

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -17,11 +17,11 @@
       "buy_medallion_text": "Get Started!",
       "show_vendor": false,
       "word_for_vendor": "brand",
-      "logo_font": "'Futura', 'Helvetica Neue', Helvetica, Arial, sans-serif",
-      "nav_font": "'Futura', 'Helvetica Neue', Helvetica, Arial, sans-serif",
-      "text_font": "'Futura', 'Helvetica Neue', Helvetica, Arial, sans-serif",
-      "headings_font": "'Futura', 'Helvetica Neue', Helvetica, Arial, sans-serif",
-      "accent_font": "'Futura', 'Helvetica Neue', Helvetica, Arial, sans-serif",
+      "logo_font": "'futura-pt', 'Futura', 'Helvetica Neue', Helvetica, Arial, sans-serif",
+      "nav_font": "'futura-pt', 'Futura', 'Helvetica Neue', Helvetica, Arial, sans-serif",
+      "text_font": "'futura-pt', 'Futura', 'Helvetica Neue', Helvetica, Arial, sans-serif",
+      "headings_font": "'futura-pt', 'Futura', 'Helvetica Neue', Helvetica, Arial, sans-serif",
+      "accent_font": "'futura-pt', 'Futura', 'Helvetica Neue', Helvetica, Arial, sans-serif",
       "global_heading_font_color": "#fff",
       "bg_color": "#ffffff",
       "page_bg_transparent": true,
